--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=server
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+#docker compose up --build -d 
+#para eliminar los contenedores
+#docker compose down 
+server.port=${SERVER_PORT}
 
-server.port=8082
-
-db.host=localhost
-db.port=3306
-db.name=adj_demo
-db.user=root
-db.pass=root
+db.host=${DB_HOST}
+db.port=${DB_PORT}
+db.name=${DB_NAME}
+db.user=${DB_USER}
+db.pass=${DB_PASS}
 
 
